--- a/test/README
+++ b/test/README
@@ -1,4 +1,3 @@
-
 This directory is intended for PlatformIO Test Runner and project tests.
 
 Unit Testing is a software testing method by which individual units of
@@ -6,6 +5,12 @@ source code, sets of one or more MCU program modules together with associated
 control data, usage procedures, and operating procedures, are tested to
 determine whether they are fit for use. Unit testing finds problems early
 in the development cycle.
+
+To run the unit tests for `MyWebServer`, execute the following command in the project root:
+
+```bash
+platformio test
+```
 
 More information about PlatformIO Unit Testing:
 - https://docs.platformio.org/en/latest/advanced/unit-testing/index.html
