--- a/lib/TODO
+++ b/lib/TODO
@@ -1,24 +1,24 @@
 # Intended Components List
 
 - [ ] Motor
-  - [x] Servo
+  - [x] Servo SG90
     - [x] 180°
-    - [ ] 360°
+    - [x] 360°
   - [ ] Stepper
     - [ ] DRV8825
   - [ ] BLDC
-    - [ ] SimpleFOC
+    - [ ] SimpleFOCMini DRV8313 based
   - [ ]DC
     - [ ] L293D
 - [ ] LED 
   - [ ] PWM
 - [ ] GPS
-  - [ ] M100 MINI
+  - [ ] M100 MINI (UART)
 - [ ] ToF
   - [ ] VL53L/1XV2
 - [ ] IMU
   - [ ] GY-BNO055
-  - [ ] GY-9250
+  - [ ] GY-9250 / MPU9250
   - [ ] ITG/MPU6050
 - [ ] Ultrasonic
   - [ ] HC-SR04
